welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:20: error: not found: value poseBuiscuit
poseBuiscuit;
^